third_year/programming_languages_and_paradigms/project_2/PL-version/examples/good/01-dwa-typy.hml
let a = 37 in
let b = true
in b