third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/zz-niezgodne-typy-7.hml
let id x = x in
id 5 || true